@@ -218,6 +218,7 @@ void Preferences::init()
       defaultPlayDuration     = 300;      // ms
       warnPitchRange          = true;
       followSong              = true;
+      importCharset           = "GBK";
 
       //update
       checkUpdateStartup      = 0;
@@ -429,7 +430,7 @@ void Preferences::read()
 
       defaultPlayDuration    = s.value("defaultPlayDuration", 300).toInt();
       importStyleFile        = s.value("importStyleFile", "").toString();
-      importCharset          = s.value("importCharset", "GBK").toByteArray();
+      importCharset          = s.value("importCharset", "GBK").toString();
       warnPitchRange         = s.value("warnPitchRange", true).toBool();
       followSong             = s.value("followSong", true).toBool();
 
@@ -1141,7 +1142,7 @@ void PreferenceDialog::apply()
       else
             preferences.importStyleFile.clear();
 
-      preferences.importCharset = importCharsetList->currentText().toUtf8();
+      preferences.importCharset = importCharsetList->currentText();
 
       preferences.warnPitchRange = warnPitchRange->isChecked();
 
